Implemented DtoConvertable for GroupPostComment.java